<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Register now</string>
    <string name="title_login_page">Don\'t have an account yet?</string>
    <string name="name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="sign_up_error">Failed. %s</string>
    <string name="hint_login_email">Enter ur registered email!</string>
    <string name="hint_login_password">Your password!</string>
    <string name="login_error">Failed. %s</string>
    <string name="our_story_begins_here">our story begins here</string>
    <string name="add_new_story">Add new story</string>
    <string name="item_story_content_desc">User\'s story picture</string>
    <string name="story_by_user">Story by User</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete Image</string>
    <string name="empty_image_warning">Please insert the image file</string>
    <string name="add_desc">Write a caption…</string>
    <string name="no_data">No data, please refresh.</string>
    <string name="refresh">Refresh</string>
    <string name="open_in_full">Fullscreen</string>
    <string name="minimum_character">"Min 8 char!!"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map Mode</string>
    <string name="list">List Mode</string>
    <string name="user_location">Show location</string>
    <string name="location_checkbox">Include location</string>
    <string name="retry">Retry</string>
    <string name="share_this_story">Share this story</string>
    <string name="download_picture">Download picture</string>
</resources>